--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -43,4 +43,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:23.0.1'
     compile 'com.android.support:cardview-v7:23.0.1'
 
+    compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.google.code.gson:gson:2.2.2'
+    compile 'com.jakewharton:disklrucache:2.0.2'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
+
+
 }
